# Ritha

./: .gitignore  .gitleaks.toml  CONTRIBUTING.md  README.md  docker-compose.yml  features.md  pyproject.toml  render.free.yaml  render.yaml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  conftest.py  diagnose.py  docker-compose.yml  entrypoint.sh  fix_blank_page.py  fix_config.py  fix_frontend.py  manage.py  openapi.yaml  pytest.ini  requirements-ci.txt  requirements.txt  requirements_prod.txt
backend/agents/: admin.py  input_serializers.py  models.py  serializers.py  services.py  tasks.py  throttles.py  urls.py  views.py
backend/arokah/: __init__.py  apps.py  asgi.py  celery.py  exceptions.py  health.py  middleware.py  schema_types.py  settings.py  settings_production.py  signals.py  urls.py  ws_auth.py  wsgi.py
backend/auth_app/: admin.py  email.py  models.py  serializers.py  throttles.py  urls.py  views.py
backend/calendar_sync/: apple_calendar.py  apps.py  google_calendar.py  outlook_calendar.py  tasks.py  token_store.py  urls.py  views.py
backend/cultural/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/frontend/: index.html
docs/: GO-LIVE.md  google-oauth-verification.md  microsoft-oauth-verification.md  social-login-setup.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
mobile_flutter/: README.md  pubspec.yaml
scripts/: dev-backend-lan.sh  smoke_test.sh
(+299 files in other folders)
